--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 }
 
 :root {
-  font-size: 16px;
+  font-size: 50px;
   font-family: "Inconsolata";
   --text-primary: #b6b6b6;
   --text-secondary: #ececec;
@@ -30,7 +30,7 @@ main {
 }
 
 body::-webkit-scrollbar {
-  width: 0.3rem;
+  width: 0.2rem;
 }
 body::-webkit-scrollbar-track {
   background: #1e1e24;
@@ -41,11 +41,10 @@ body::-webkit-scrollbar-thumb {
 }
 body::-webkit-scrollbar-thumb:hover {
   background: #868584;
-  border-radius: 12px;
 }
 .navbar {
   width: 300rem;
-  height: 50px;
+  height: 2rem;
   position: fixed;
   background-color: var(--bg-secondary);
 }
@@ -53,7 +52,7 @@ body::-webkit-scrollbar-thumb:hover {
 .h1 {
   color: #ffffff;
   font-family: Inconsolata;
-  font-size: 60px;
+  font-size: 2.5rem;
   padding: 0px;
   margin: 2px;
 }
@@ -119,6 +118,7 @@ body::-webkit-scrollbar-thumb:hover {
   list-style: none;
   padding: 5px;
   margin: 5px;
+  margin-top: 0.3rem;
   display: flex;
   flex-direction: row;
 }
@@ -126,7 +126,7 @@ body::-webkit-scrollbar-thumb:hover {
 .navbar-link {
   text-decoration: none;
   color: #ffffff;
-  padding: 5px;
+  padding: 6px;
   margin-left: 15px;
-  font-size: 30px;
+  font-size: 1rem;
 }
